--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,27 @@ nav ul li{
 nav img{
     border-radius: 50%;
 }
+
+header{
+    min-height: 100vh;
+}
+
+header{
+    display: flex;
+    justify-content: space-around;
+}
+
+header>div{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header>div:nth-child(2){
+    flex-direction: column;
+}
+
+header h1{
+    font-size: 2.5rem;
+}
